<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Messages</string>
    <string name="version_name">beta 1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="disabled_app_message">Messages is not your default SMS app. Change this in Settings.</string>
    <string name="hint_send_message">Type to send a message</string>
    <string name="hint_send_message_disabled">Sending is disabled</string>
    <string name="cd_send_button">Send an SMS</string>
    <string name="call">Call</string>
    <string name="view_contact">View contact</string>
    <string name="delete_thread">Delete thread</string>
    <string name="failed_to_send_message">Failed to send message</string>
    <string name="couldnt_send_to">Couldn\'t send to %1$s</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="deleted_many_threads">Deleted %1$d threads</string>
    <string name="deleted_one_thread">Deleted conversation with %1$s</string>
    <string name="preference_unread_title">Prioritise unread conversations</string>
    <string name="preference_unread_summary">Show unread conversations at the top of the list</string>
    <string name="resend">Resend</string>
    <string name="mms_error_title">Failed to receive MMS</string>
    <string name="mms_error_text">Messages app cannot receive MMS messages</string>
    <string name="new_message">New message</string>
    <string name="notification_sound">Notification sound</string>
    <string name="cd_new_message">Send new message</string>
    <string name="pref_sum_notification">Display notifications for new and failed messages</string>
    <string name="pref_title_notifications">Show notifications</string>
    <string name="default_str">Default</string>
    <string name="mms_error_fragment_title">MMS error</string>
    <string name="mms_error_fragment_message">Messages cannot currently receive MMS. If you\'d like to send and receive MMS, please use another MMS app.</string>
    <string name="mms_confirm_title">Confirm default</string>
    <string name="mms_confirm_message">Messages does not currently support MMS. Any MMS messages (such as video or images) will not be received or stored on your phone. If you use MMS frequently, please use another messaging app.</string>
    <string name="continue_text">Continue</string>
    <string name="about">About</string>
    <string name="alpha_message">Thanks for trying out Messages. Please note that Messages is currently in alpha, so quirks and bugs are likely. \n\nPlease give feedback through the Github project!</string>
    <string name="alpha_title">Messages alpha</string>
    <string name="version_name_label">version %1$s</string>
    <string name="messages_mission">Messages is an open-source SMS app, designed to push innovation on SMS, without locking users into proprietary messaging systems.</string>
    <string name="hint_enter_number">Type a number</string>
    <string name="pref_sum_persistent">Always show a notification when there are unread texts</string>
    <string name="pref_title_persistent">Persistent notification</string>
    <string name="dialog_title_delete_threads">Confirm delete</string>
    <string name="dialog_sum_delete_threads">Are you sure you want to delete the selected conversations?</string>
    <string name="reply">Reply</string>
    <string name="add_contact">Add contact</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="open_link">Open link</string>
    <string name="sendingdotdotdot">Sending…</string>
    <string name="draft_preamble">Draft </string>
    <string name="cd_failed_to_send">Failed to send icon</string>
    <string name="from_me_preamble">You </string>
    <string name="failed_to_send_touch_to_resend">Failed to send. Touch icon to resend.</string>
    <string name="title_preferences">Settings</string>
    <string name="title_about">About</string>
    <string name="millisDifference">%1$s milliseconds ago</string>
    <string name="secondsDifference">%1$s seconds ago</string>
    <string name="minutesDifference">%1$s minutes ago</string>
    <string name="hoursDifference">%1$s hours ago</string>
    <string name="underAMinuteAgo">Just now</string>
    <string name="yesterday">Yesterday, %1$s</string>
    <string name="pref_sum_stats">Let the developer see statistics about how you use the app</string>
    <string name="pref_title_stats">Allow anonymous statistics</string>
    <string name="preference_large_unread_title">Expanded unread previews</string>
    <string name="preference_large_unread_summary">Display larger previews on unread conversations</string>
    <string name="no_messages">No messages.\nWhy not send one?</string>
    <string name="preference_conversation_count_title">Show conversation count</string>
    <string name="preference_conversation_count_summary">Display the number of texts in a conversation</string>

    <plurals name="minutesDifference">
        <item quantity="one">%1$s minute ago</item>
        <item quantity="other">%1$s minutes ago</item>
    </plurals>

    <plurals name="hoursDifference">
        <item quantity="one">%1$s hour ago</item>
        <item quantity="other">%1$s hours ago</item>
    </plurals>
</resources>
