<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Alex Curran
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="send_stats"
        android:title="@string/pref_title_stats"
        android:summary="@string/pref_sum_stats"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="unread_priority"
        android:title="@string/preference_unread_title"
        android:summary="@string/preference_unread_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
            android:key="large_unread_previews"
            android:title="@string/preference_large_unread_title"
            android:summary="@string/preference_large_unread_summary"
            android:defaultValue="true" />

    <!--<CheckBoxPreference-->
            <!--android:key="conversation_count"-->
            <!--android:title="@string/preference_conversation_count_title"-->
            <!--android:summary="@string/preference_conversation_count_summary"-->
            <!--android:defaultValue="false" />-->

    <PreferenceCategory android:title="Notifications">

        <CheckBoxPreference
            android:key="notifications"
            android:title="@string/pref_title_notifications"
            android:summary="@string/pref_sum_notification"
            android:defaultValue="true" />

        <!--<CheckBoxPreference-->
            <!--android:key="persistent_notification"-->
            <!--android:title="@string/pref_title_persistent"-->
            <!--android:summary="@string/pref_sum_persistent"-->
            <!--android:defaultValue="false" />-->

        <RingtonePreference
            android:key="ringtone"
            android:showSilent="true"
            android:showDefault="true"
            android:ringtoneType="notification"
            android:title="@string/notification_sound" />

    </PreferenceCategory>

</PreferenceScreen>